# Standards-auditing-platform

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
src/sap_bot/: config.py  misc.py  utils.py
src/sap_bot/handlers/: __init__.py  commands.py  quiz.py
src/sap_tg_bot/: handlers.py  main.py  quiz.py  setting.py
src/standarts_auditing_platform/: __init__.py  sap_question.py  sap_quiz.py  sap_report.py
templates/: config-sample.yaml  draft-config-sample.yaml
