[tool.poetry]
name = "acs-lab4-standarts-auditing-platform"
version = "0.1.0"
description = ""
authors = ["Roman <CuberHuber>"]
readme = "README.md"
packages = [{include = "acs_lab4_standarts_auditing_platform"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
jinja2 = "^3.1.2"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
